--- a/src/styles/components/_index.scss
+++ b/src/styles/components/_index.scss
@@ -1,4 +1,4 @@
-@forward './header';
-@forward './footer';
-@forward './buttons';
-@forward './global_com';
+@forward 'buttons';
+@forward 'global_com';
+@forward 'navmenu';
+@forward 'Hamburger.icon';
