--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -23,6 +23,10 @@ html {
             weight: normal;
         }
     }
+
+    @media (max-width:vars.$medium-devices) {
+        font-size: 2rem;
+    }
 }
 
 
