--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -12,3 +12,10 @@ $section-padding: 80px 0;
 
 //font 
 $font: 'Dancing Script', cursive;
+
+//break points
+$small-devices: 576px;
+$medium-devices: 768px;
+$large-devices: 992px;
+$x-large-devices: 1200px;
+$xx-large-devices: 1400px;
