--- a/src/main-style.scss
+++ b/src/main-style.scss
@@ -19,39 +19,14 @@ $section-background: #f0f5f7;
 // --transition: all .3s ease-in-out;
 // --overlay-bkg: rgba(0,0,0, .75);
 
-// Small devices (landscape phones, 576px and up)
-@media (min-width: 576px) {
-    .container {width: 540px;}
-}
 
-// Medium devices (tablets, 768px and up)
-@media (min-width: 768px) {
-    .container {width: 720px;}
-}
-
-// Large devices (desktops, 992px and up)
-@media (min-width: 992px) {
-    .container {width: 960px;}
-}
-
-// X-Large devices (large desktops, 1200px and up)
-@media (min-width: 1200px) {
-    .container {width: 1140px;}
-}
-
-// XX-Large devices (larger desktops, 1400px and up)
-@media (min-width: 1400px) {
-    .container {width: 1320px}
-}
-
-.container {margin: auto; padding: 0 15px;}
 
 // global style
 * {box-sizing: border-box;}
 
-html {
-    font-size: 16px; // root font size (rem)
-} 
+// html {
+//     font-size: 16px; // root font size (rem)
+// } 
 
 ul, ol { 
     margin: 0;
