--- a/src/styles/components/_navmenu.scss
+++ b/src/styles/components/_navmenu.scss
@@ -6,14 +6,14 @@
     position: absolute;
     top: 100%;
     left: 0;
-    z-index: 10;
+    z-index: -1;
     width: 100%;
     background-color: vars.$secondary-color;
     perspective: 500px;
     text-transform: uppercase;
-    display: none;
+    opacity: 0;
+    transition: vars.$main-transition;
 
-    
     li {
         padding: 16px;
         color:#fff;
@@ -29,5 +29,10 @@
         background-color: vars.$main-color ;
         transform: translateZ(10px);
         }
+    }
+
+    &.show {
+        opacity: 1;
+        z-index: 10;
     }
 }
