--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -36,11 +36,19 @@ header {
                     color: inherit;
                     text-decoration: none;
                 }
-            }
 
-            @media (max-width: 1000px) {
-                column-gap: 0;
-
+                // header hover effect
+                &.grow-shadow {
+                    cursor: vars.$btn-cursor;
+                    padding: 3px 15px; // i may change it
+                    border-radius: 10px;
+                    transition: vars.$main-transition;
+                    
+                    &:hover {
+                        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+                        transform: scale(1.1);
+                    }
+                }
             }
         }
     }
@@ -63,26 +71,7 @@ header {
     }
 }
 
-
-
-
-.active { // active section
-    color: vars.$main-color;
-    font-weight: bold;
-}
-
-
-// header hover effect
-.grow-shadow {
-    cursor: vars.$btn-cursor;
-    padding: 3px 15px; // i may change it
-    border-radius: 10px;
-    transition: vars.$main-transition;
-    
-    &:hover {
-        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-        transform: scale(1.1);
-    }
-
-    
-}
+// .active { // active section
+//     color: vars.$main-color;
+//     font-weight: bold;
+// }
