--- a/src/styles/sections/_about.scss
+++ b/src/styles/sections/_about.scss
@@ -1,12 +1,12 @@
 @use '../utils/variables' as vars;
 @use '../components/global_com' as *;
+
 .about {
     padding: vars.$section-padding;
     
     .container {
         .info {
             margin-bottom: 100px;
-            text-align: center;
         }
 
         .skills {
@@ -23,9 +23,20 @@
                 box-shadow: 0px 1px 10px rgb(0 0 0 / 37%);
                 border-radius: 10px;
                 letter-spacing: 1.5px;
-                
-                .icon {
-                    @extend .icon
+
+                span {
+                    transition: vars.$main-transition;
+                }
+
+                &:hover {
+                    span {
+                        transform: translateX(30%);
+                        font-style: italic;
+                    }
+                    .icon {
+                        transform:scale(1.2);
+                        color: vars.$secondary-color;
+                    }
                 }
             }
         }
