--- a/src/styles/sections/_contact.scss
+++ b/src/styles/sections/_contact.scss
@@ -3,21 +3,17 @@
 
 .contact {
     padding: vars.$section-padding;
-    padding-bottom: 40px;
+    padding-bottom: 2em;
     .container {
         @extend .p;
 
-        & > div:not(:last-child) {
-            margin-left: 30px;
+        .info {
+            margin-left: 1.5rem;
         
             p {
                 display: flex;
                 align-items: center;
-
-                .icon {
-                    font-size: 1.5rem;
-                    margin-right: 10px;
-                }
+                gap: .5em;
                 a {
                     color: inherit;
                     text-decoration: none;
@@ -27,19 +23,32 @@
                     }
                 }
             }
+            
+            @media (min-width: vars.$medium-devices) {
+                margin-left: 3rem;
+                p {
+                    gap: 1em;
+
+                    .con-icon {
+                        font-size: 2rem;
+                    }
+                }
+            }
         }
 
         .social {
             display: flex;
             align-items: center;
+            flex-wrap: wrap;
+            gap: .5em;
 
-            .icon:first-child {
-                margin-left: 10px;
+            div {
+                text-align: center;
             }
         }
     }
     
-    .icon {
+    .icon, .con-icon {
         color: vars.$secondary-color;
         cursor: vars.$btn-cursor;
     }
