--- a/src/styles/sections/_projects.scss
+++ b/src/styles/sections/_projects.scss
@@ -4,46 +4,56 @@
     padding: vars.$section-padding;
     text-align: center;
     .container {
-        // h2 {@extend .header;}
-
         .projects {
-            margin-top: 30px;
+            margin-top: 2em;
             display: grid;
-            grid-template-columns: 2fr repeat(2, 1fr) 2fr;
-            grid-template-rows: repeat(4, 1fr);
-            gap: 10px;
+            gap: .5rem;
 
-            // grid-template-columns: repeat(6, 1fr);
-            // grid-template-rows: repeat(6, 1fr); 
+            > div {
+                position: relative;
+                overflow: hidden;
+                background: {
+                    repeat: no-repeat;
+                    size: cover;
+                    position: center center;
+                };
+                border: 1px solid vars.$secondary-color;
+                border-radius: 5px;
+                height: 25em;
 
-            div {
-                background-color: greenyellow;
-                
-                &:first-child {
-                    // grid-area: 1 / 1 / 6 / 3;
-                    // grid-column: 1 / 3;
-                    grid-row: 1 / span 6;
-                }
-                &:nth-child(2) {
-                    // grid-area: 1 / 5 / 6 / 7; 
-                    grid-column: 4;
-                    grid-row: 1 / span 6;
-                }
-                &:nth-child(3) {
-                    // grid-area: 1 / 3 / 3 / 5;
-                    grid-column: 2 / 4;
-                    grid-row: 1 / 3;
+                .overlay {
+                    position: absolute;
+                    bottom: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                    background-color: #08526d8f;
+                    transition: transform .5s ease-in-out;
+                    transform: rotate(-90deg);
+                    transform-origin: 0 100%;
+
+                    color: vars.$white-color;
+                    padding: 2em;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    gap: 2em;
+                    
+                    a {
+                        text-decoration: none;
+                        padding: 1em 1.5em;
+                        border-radius: 5px;
+                    }
                 }
 
-                &:last-child {
-                    // grid-area: 3 / 3 / 5 / 5;
-                    grid-column: 2 / 4;
-                    grid-row: 3 / 5;
-
+                &:hover .overlay{
+                    transform: rotate(0);
                 }
+            }
+            
+            @media (min-width: vars.$medium-devices) {
+                grid-template-columns: repeat(2, .5fr);
             }
         }
     }
-
-    &:hover h2{opacity: 1;}
 }
